--- a/frontend/styles/experience.less
+++ b/frontend/styles/experience.less
@@ -1,66 +1,75 @@
 /* experience block */
 .experience {
-  display: flex;
-  justify-content: space-between;
-  flex-flow: row wrap;
+  width: 100%;
   z-index: 2;
   position: relative;
-  top: -140px;
-  padding: 140px 0;
-  background: url("../images/experience.png") no-repeat;
-  background-size: 100% 100%;
+  top: -100px;
   color: rgba(18, 18, 18, 0.86);
 
-  .experience-caption {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 50px;
+  .experience-top {
+    background-image: url("../images/background/ex-2.png");
   }
 
-  .container-expirience {
-    display: flex;
-    justify-content: space-around;
-    align-items: stretch;
-    align-content: stretch;
-    flex-flow: row wrap;
-    width: 100%;
-    max-width: 1100px;
-    margin: 0 auto;
-    padding: 0;
+  /* experience-content */
+  .experience-content {
+    background-image: url("../images/background/ex-1.png");
+    padding: 80px 0;
 
-    .skills {
-      width: 280px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: 5%;
-
-      .img-skill {
-        display: block;
-        max-width: 40%;
-        max-height: 100%;
-        height: auto;
-      }
-
-      .descrip-skill {
-        margin-top: 10px;
-        line-height: 1.5em;
-        color: #515153;
-        text-align: center;
-      }
-
-    }
-
-    .p-skill {
+    .experience-caption {
       width: 100%;
-      margin-top: 30px;
       text-align: center;
-      font-size: 18px;
-      font-weight: bold;
+      margin-bottom: 70px;
     }
 
-  }
+    .container-expirience {
+      display: flex;
+      justify-content: space-around;
+      align-items: stretch;
+      align-content: stretch;
+      flex-flow: row wrap;
+      width: 100%;
+      max-width: 1100px;
+      margin: 0 auto;
 
+      .skills {
+        width: 280px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 25px;
+
+        .img-skill {
+          display: block;
+          max-width: 40%;
+          max-height: 100%;
+          height: auto;
+        }
+
+        .descrip-skill {
+          width: 80%;
+          margin-top: 10px;
+          line-height: 1.5em;
+          color: #515153;
+          text-align: center;
+        }
+
+      }
+
+      .p-skill {
+        width: 100%;
+        margin-top: 30px;
+        text-align: center;
+        font-size: 18px;
+        font-weight: bold;
+      }
+
+    }
+
+  }/* END experience-content */
+
+  .experience-bottom {
+    background-image: url("../images/background/ex-3.png");
+  }
 
 
 }/* END experience block */
