--- a/public/media-styles/small-devices.css
+++ b/public/media-styles/small-devices.css
@@ -1,41 +1,77 @@
 /* Small devices (tablets, 768px and 992px) */
 @media only screen and (min-width: 767px) and (max-width: 992px) {
-  /* welcome block */
-  section.welcome {
+  body {
+    /* welcome block */
+    /* END welcome content */
+    /* experience block */
+    /* END experience block */
+    /* works block */
+    /* END works block */
+    /* about block */
+    /* END about block */
+    /* footer */
+    /* END footer */
+  }
+  body section.welcome {
+    /* welcome content */
+    /* END welcome block */
+  }
+  body section.welcome .welcome-content {
     /* button for me style */
     /* social-offices */
     /* END social-offices */
   }
-  section.welcome h1 {
+  body section.welcome .welcome-content h1 {
     font-size: 1.8em;
   }
-  section.welcome h2 {
+  body section.welcome .welcome-content h2 {
     font-size: 1.3em;
   }
-  section.welcome .welcome-caption {
+  body section.welcome .welcome-content .welcome-caption {
+    margin-top: 130px;
     margin-bottom: 0;
   }
-  section.welcome .welcome-button {
-    width: 27.7083%;
-    max-width: 340px;
-    max-height: 50px;
-    height: 29.4117%;
-    font-size: 17px;
+  body section.welcome .welcome-content .welcome-button {
+    width: 37.7083%;
+    height: 45px;
+    margin: 20px 0;
   }
-  section.welcome .social-offices {
+  body section.welcome .welcome-content .social-offices {
+    margin: 40px 0 0;
     width: 350px;
   }
-  section.welcome .social-offices .group-social .network-icon {
+  body section.welcome .welcome-content .social-offices .group-social .network-icon {
     font-size: 15px;
   }
-  /* END welcome block */
-  /* experience block */
-  section.experience {
+  body section.experience {
     top: -140px;
   }
-  section.experience .container-expirience .skills {
-    width: 200px;
+  body section.experience .experience-content .skills {
+    width: 120px;
   }
-  /* END experience block */
+  body section.works {
+    top: -240px;
+    /* works-content */
+    /* END works-content */
+  }
+  body section.works .works-content .portfolio .project {
+    margin-top: 20px;
+    width: 40%;
+  }
+  body .about {
+    top: -350px;
+    /* about-content */
+    /* END about-content */
+  }
+  body .about .about-content {
+    padding: 50px 2%;
+  }
+  body .about .about-bottom {
+    background-image: url("../images/background/about-3.png");
+  }
+  body .footer-site {
+    top: -450px;
+  }
+  /* END BODY */
 }
 /* END Small devices (tablets, 768px and 992px) */
