--- a/public/styles/work.css
+++ b/public/styles/work.css
@@ -1,70 +1,80 @@
 /* works block */
 .works {
-  background: url("../images/work.png") no-repeat;
-  background-size: 100% 100%;
-  border: 1px solid black;
-  height: 550px;
-  /* container-carousel */
-  /* END container-carousel */
-}
-.works .container-carousel {
-  height: 100%;
-  border: 1px solid black;
-  /* END gallery carousel */
-}
-.works .container-carousel .carousel {
-  border: 1px solid black;
-  height: 100%;
+  width: 100%;
   position: relative;
-  padding: 10px 40px;
-  /* gallery carousel */
+  top: -200px;
+  color: black;
+  z-index: 3;
 }
-.works .container-carousel .carousel .carousel img {
-  border: 1px solid black;
-  width: 130px;
-  height: 130px;
-  display: block;
+.works .works-top {
+  background-image: url("../images/background/work-2.png");
 }
-.works .container-carousel .carousel .arrow {
-  border: none;
-  position: absolute;
-  top: 60px;
+.works .works-content {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-flex-flow: column wrap;
+      -ms-flex-flow: column wrap;
+          flex-flow: column wrap;
+  width: 100%;
+  background-image: url("../images/background/work-1.png");
+  /* portfolio block */
+  /* END portfolio block */
+}
+.works .works-content .portfolio {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+      -ms-flex-flow: row wrap;
+          flex-flow: row wrap;
+  -webkit-justify-content: space-around;
+      -ms-flex-pack: distribute;
+          justify-content: space-around;
+  -webkit-box-align: stretch;
+  -webkit-align-items: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  -webkit-align-content: stretch;
+      -ms-flex-line-pack: stretch;
+          align-content: stretch;
+  width: 100%;
+  max-width: 1100px;
+  padding-bottom: 30px;
+  /* project */
+  /* END project */
+}
+.works .works-content .portfolio .project {
+  width: 30%;
+  margin-top: 40px;
+  -webkit-border-radius: 5px;
+          border-radius: 5px;
   padding: 0;
-  font-size: 24px;
-  line-height: 24px;
-  display: block;
+  border: 1px solid transparent;
 }
-.works .container-carousel .carousel .arrow:focus {
-  outline: none;
-}
-.works .container-carousel .carousel .arrow:hover {
-  cursor: pointer;
-}
-.works .container-carousel .carousel .prev {
-  left: 7px;
-}
-.works .container-carousel .carousel .next {
-  right: 7px;
-}
-.works .container-carousel .carousel .gallery {
+.works .works-content .portfolio .project .project-img {
   width: 100%;
-  height: 100%;
-  overflow: hidden;
+}
+.works .works-content .portfolio .project .project-img img {
+  -webkit-border-radius: 2px;
+          border-radius: 2px;
+  display: block;
+  max-width: 100%;
+}
+.works .works-content .portfolio .project:hover {
   border: 1px solid black;
 }
-.works .container-carousel .carousel .gallery ul {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  -webkit-transition: margin-left 250ms;
-  transition: margin-left 250ms;
-  font-size: 0;
-}
-.works .container-carousel .carousel .gallery ul li {
-  width: 100%;
-  height: 100%;
-  display: inline-block;
+.works .works-bottom {
+  background-image: url("../images/background/work-3.png");
 }
 /* END works block */
