internet explorer 11 full responsive

--- a/frontend/styles/work.less
+++ b/frontend/styles/work.less
@@ -33,6 +33,7 @@
       /* project */
       .project {
         width: 30%;
+        max-width: 330px;
         margin-top: 40px;
         border-radius: 5px;
         padding: 0;
@@ -45,7 +46,8 @@
           img {
             border-radius: 2px;
             display: block;
-            max-width: 100%;
+            max-width: 330px;
+            width: 100%;
           }
         }
 
