--- a/frontend/media-styles/extra-small-devices.less
+++ b/frontend/media-styles/extra-small-devices.less
@@ -228,8 +228,8 @@
         /* foto me block */
         .foto-about {
           width: 100%;
-          height: 100%;
           max-width: 190px;
+          max-height: 290px;
           margin-bottom: 10px;
 
           img {
@@ -271,7 +271,6 @@
 
     /* footer-content */
     .footer-content {
-      background-image: url("../images/background/contacts-1.png");
       width: 100%;
       display: flex;
       flex-flow: column nowrap;
