--- a/frontend/styles/about.less
+++ b/frontend/styles/about.less
@@ -38,6 +38,7 @@
         flex-flow: column nowrap;
         align-items: center;
         width: 80%;
+        padding: 0;
         font-size: 12pt;
         line-height: 20pt;
 
@@ -53,13 +54,10 @@
       /* foto me block */
       .foto-about {
         width: 20%;
-        height: 100%;
-        max-width: 190px;
 
         img {
           display: block;
           max-width: 100%;
-          //width: 200px;
           height: auto;
         }
 
