--- a/public/styles/about.css
+++ b/public/styles/about.css
@@ -65,6 +65,7 @@
       -ms-flex-align: center;
           align-items: center;
   width: 80%;
+  padding: 0;
   font-size: 12pt;
   line-height: 20pt;
 }
@@ -77,8 +78,6 @@
 }
 .about .about-content .about-container .foto-about {
   width: 20%;
-  height: 100%;
-  max-width: 190px;
 }
 .about .about-content .about-container .foto-about img {
   display: block;
