--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -456,6 +456,7 @@ body .works .works-content .portfolio {
 }
 body .works .works-content .portfolio .project {
   width: 30%;
+  max-width: 330px;
   margin-top: 40px;
   -webkit-border-radius: 5px;
           border-radius: 5px;
@@ -469,7 +470,8 @@ body .works .works-content .portfolio .project .project-img img {
   -webkit-border-radius: 2px;
           border-radius: 2px;
   display: block;
-  max-width: 100%;
+  max-width: 330px;
+  width: 100%;
 }
 body .works .works-content .portfolio .project:hover {
   border: 1px solid black;
@@ -543,6 +545,7 @@ body .about .about-content .about-container .about-info {
       -ms-flex-align: center;
           align-items: center;
   width: 80%;
+  padding: 0;
   font-size: 12pt;
   line-height: 20pt;
 }
@@ -555,8 +558,6 @@ body .about .about-content .about-container .about-info .me-text {
 }
 body .about .about-content .about-container .foto-about {
   width: 20%;
-  height: 100%;
-  max-width: 190px;
 }
 body .about .about-content .about-container .foto-about img {
   display: block;
@@ -592,11 +593,6 @@ body .footer-site .footer-top {
       -ms-flex-pack: end;
           justify-content: flex-end;
 }
-body .footer-site .footer-top h1 {
-  padding: 2px;
-  margin-bottom: 0;
-  color: #FFFFFF;
-}
 body .footer-site .footer-content {
   background-image: url("../images/background/contacts-1.png");
   width: 100%;
@@ -615,6 +611,11 @@ body .footer-site .footer-content {
   position: relative;
   /* me-social-network footer */
   /* END me-social-network footer */
+}
+body .footer-site .footer-content h1 {
+  padding: 2px;
+  margin-bottom: 0;
+  color: #FFFFFF;
 }
 body .footer-site .footer-content .feel-footer {
   margin-top: 35px;
