--- a/public/styles/work.css
+++ b/public/styles/work.css
@@ -56,6 +56,7 @@
 }
 .works .works-content .portfolio .project {
   width: 30%;
+  max-width: 330px;
   margin-top: 40px;
   -webkit-border-radius: 5px;
           border-radius: 5px;
@@ -69,7 +70,8 @@
   -webkit-border-radius: 2px;
           border-radius: 2px;
   display: block;
-  max-width: 100%;
+  max-width: 330px;
+  width: 100%;
 }
 .works .works-content .portfolio .project:hover {
   border: 1px solid black;
