--- a/frontend/media-styles/extra-small-devices.less
+++ b/frontend/media-styles/extra-small-devices.less
@@ -369,6 +369,39 @@
   /* END footer */
 
 
+  /* newsletter block style */
+  section.newsletter {
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: rgba(2, 2, 1, 0.83);
+    transition: opacity 1s;
+
+    .close-newsletter {
+      width: 30px;
+      position: absolute;
+      cursor: pointer;
+      right: 5%;
+      top: 2%;
+    }
+
+    .block-newsletter {
+      width: 80%;
+      max-width: 800px;
+      margin: 60px auto 0;
+      text-align: center;
+
+      .enter-me-letter {
+        font-size: 14pt;
+      }
+
+    }
+  }
+
 }/* END Extra small devices (phones, 320px) and 768px */
 
 
