--- a/frontend/styles/styles.less
+++ b/frontend/styles/styles.less
@@ -13,7 +13,6 @@ body {
   line-height: 22px;
   font-size: 14px;
   color: @color-text2;
-  padding-bottom: -10000px;
 
   h1 {
     font-size: 2em; //86pt
@@ -78,6 +77,7 @@ body {
   @import "work.less";
   @import "about.less";
   @import "footer.less";
+  @import "newsletter.less";
 
 }
 
