--- a/frontend/styles/work.less
+++ b/frontend/styles/work.less
@@ -52,8 +52,7 @@
         }
 
         &:hover {
-          border: 1px solid black;
-          //box-shadow:
+          box-shadow: inset 0 0 10px #000000;
         }
 
       }/* END project */
