--- a/public/media-styles/media-styles.css
+++ b/public/media-styles/media-styles.css
@@ -402,6 +402,35 @@
     transition: all 0.3s;
   }
   /* END footer */
+  /* newsletter block style */
+  section.newsletter {
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background: rgba(2, 2, 1, 0.83);
+    -webkit-transition: opacity 1s;
+    transition: opacity 1s;
+  }
+  section.newsletter .close-newsletter {
+    width: 30px;
+    position: absolute;
+    cursor: pointer;
+    right: 5%;
+    top: 2%;
+  }
+  section.newsletter .block-newsletter {
+    width: 80%;
+    max-width: 800px;
+    margin: 60px auto 0;
+    text-align: center;
+  }
+  section.newsletter .block-newsletter .enter-me-letter {
+    font-size: 14pt;
+  }
 }
 /* END Extra small devices (phones, 320px) and 768px */
 /* Small devices (tablets, 768px and 992px) */
