--- a/frontend/styles/work.less
+++ b/frontend/styles/work.less
@@ -52,7 +52,8 @@
         }
 
         &:hover {
-          box-shadow: inset 0 0 10px #000000;
+          transition: box-shadow 0.3s;
+          box-shadow: -4px 6px 23px -5px rgba(0,0,0,0.75);
         }
 
       }/* END project */
